# 2-lg-mats-bench

./: .gitignore  .gitmodules  README.md  go.mod  go.sum
client/: bench.go  bench_test.go  client.go  client_test.go
opserver/src/: CMakeLists.txt  greeter_server.cc  perf_srvc_impl.cc  server.cc
opserver/src/proto/: big_matrix.proto  matrix_multiplier.proto
proto/: matmult.proto  prototool.yaml
proto/amwolff/matmult/v1/: matrix.proto  matrix_product_api.proto
proto/cmd/: format.sh  input.JSON  lint.sh  test_installation.sh
proto/examples/: request_generator.go
server/src/: CMakeLists.txt  matmult_impl.cc  matmult_impl.h  perf_srvc_impl.cc  perf_srvc_impl.h  server.cc
server/src/proto/: matmult.pb.go  matmult.proto
